crates/toml_edit/tests/snapshots/invalid/array/missing-separator-01.stderr
TOML parse error at line 1, column 9
  |
1 | arrr = [true false]
  |         ^^^^^^^^^^
invalid boolean, expected `true`
